// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaughtPokemons should display no captured pokemons when pokemon list is empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="ui header"
      >
        Caught Pokemons
      </h2>
      <h3
        class="ui header"
        style="text-align: center;"
      >
        No pokemons captured yet
      </h3>
      <div
        class="ui items"
      />
    </div>
  </body>,
  "container": <div>
    <h2
      class="ui header"
    >
      Caught Pokemons
    </h2>
    <h3
      class="ui header"
      style="text-align: center;"
    >
      No pokemons captured yet
    </h3>
    <div
      class="ui items"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CaughtPokemons should render a list of pokemons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="ui header"
      >
        Caught Pokemons
      </h2>
      <div
        class="ui items"
      >
        <div
          class="item"
        >
          <div
            class="ui tiny image"
          >
            <img
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
            />
          </div>
          <div
            class="content"
          >
            <div
              class="header"
            >
              #
              132
               
              ditto
            </div>
            <div
              class="description"
            >
              Type: 
              normal
            </div>
            <div
              class="description"
            >
              Height: 
              3
              , Weight: 
              40
            </div>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="ui tiny image"
          >
            <img
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/92.png"
            />
          </div>
          <div
            class="content"
          >
            <div
              class="header"
            >
              #
              92
               
              gastly
            </div>
            <div
              class="description"
            >
              Type: 
              normal
            </div>
            <div
              class="description"
            >
              Height: 
              13
              , Weight: 
              1
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <h2
      class="ui header"
    >
      Caught Pokemons
    </h2>
    <div
      class="ui items"
    >
      <div
        class="item"
      >
        <div
          class="ui tiny image"
        >
          <img
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
          />
        </div>
        <div
          class="content"
        >
          <div
            class="header"
          >
            #
            132
             
            ditto
          </div>
          <div
            class="description"
          >
            Type: 
            normal
          </div>
          <div
            class="description"
          >
            Height: 
            3
            , Weight: 
            40
          </div>
        </div>
      </div>
      <div
        class="item"
      >
        <div
          class="ui tiny image"
        >
          <img
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/92.png"
          />
        </div>
        <div
          class="content"
        >
          <div
            class="header"
          >
            #
            92
             
            gastly
          </div>
          <div
            class="description"
          >
            Type: 
            normal
          </div>
          <div
            class="description"
          >
            Height: 
            13
            , Weight: 
            1
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
